# msgui

./: .clangd  .gitignore  CMakeLists.txt  LICENSE.MD  README.MD  build.sh  fg_perf.sh  idea.html  idea.md  main.cpp  simpleWindow  test.dio  uml.puml
assets/shader/: basic.glsl  basicTex.glsl  sdfRect.glsl  sdfTest.glsl  text.glsl  textInstanced.glsl
core/: Application.cpp  Application.hpp  BELoadingQueue.cpp  BELoadingQueue.hpp  CMakeLists.txt  Debug.cpp  Debug.hpp  Input.cpp  Input.hpp  Listeners.cpp  Listeners.hpp  Logger.cpp  Logger.hpp  Mesh.cpp  Mesh.hpp  MeshLoader.cpp  MeshLoader.hpp  Renderer.hpp  Shader.cpp  Shader.hpp  ShaderLoader.cpp  ShaderLoader.hpp  Texture.cpp  Texture.hpp  TextureLoader.cpp  TextureLoader.hpp  Transform.cpp  Transform.hpp  Utils.hpp  Window.cpp  Window.hpp  build.sh
core/layoutEngine/: ILayoutEngine.hpp  SimpleLayoutEngine.cpp  SimpleLayoutEngine.hpp
core/node/: AbstractNode.cpp  AbstractNode.hpp  Box.cpp  Box.hpp  BoxDivider.cpp  BoxDivider.hpp  Button.cpp  Button.hpp  Dropdown.cpp  Dropdown.hpp  Frame.cpp  Frame.hpp  FrameState.hpp  Image.cpp  Image.hpp  RecycleList.cpp  RecycleList.hpp  Slider.cpp  Slider.hpp  WindowFrame.cpp  WindowFrame.hpp
core/node/utils/: BoxDividerSep.cpp  BoxDividerSep.hpp  LayoutData.cpp  LayoutData.hpp  ScrollBar.cpp  ScrollBar.hpp  ScrollBarKnob.cpp  ScrollBarKnob.hpp  SliderKnob.cpp  SliderKnob.hpp
core/nodeEvent/: FocusLost.hpp  INodeEvent.hpp  LMBClick.hpp  LMBDrag.hpp  LMBRelease.hpp  MouseButton.hpp  NodeEventManager.hpp
examples/: CMakeLists.txt  boxDividers.cpp  boxes.cpp  boxesOverflow.cpp  boxesWrapped.cpp  build.sh  buttonWithDecorations.cpp  buttonsInABox.cpp  contextmenu.cpp  dropdowns.cpp  fitBoxes.cpp  images.cpp  multiWindow.cpp  recyclelists.cpp  simpleWindow.cpp  slider.cpp  treeViews.cpp
msgui/: Application.cpp  Application.hpp  BELoadingQueue.cpp  BELoadingQueue.hpp  CMakeLists.txt  Font.hpp  FontLoader.cpp  FontLoader.hpp  Input.cpp  Input.hpp  Listeners.hpp  Logger.hpp  Mesh.hpp  MeshLoader.hpp  Renderer.hpp  Shader.cpp  Shader.hpp  ShaderLoader.cpp  ShaderLoader.hpp  Texture.hpp  TextureLoader.cpp  Transform.hpp  Utils.hpp  Window.cpp  Window.hpp  build.sh
msgui/build_dir/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
msgui/common/: Constants.hpp  Defines.hpp
msgui/events/: FocusLost.hpp  INodeEvent.hpp  LMBClick.hpp  LMBDrag.hpp  LMBItemRelease.hpp  LMBRelease.hpp  LMBReleaseNotHovered.hpp  LMBTreeItemRelease.hpp  MouseButton.hpp  MouseEnter.hpp  MouseExit.hpp  NodeEventManager.hpp  RMBRelease.hpp  Scroll.hpp  WheelScroll.hpp  WindowResize.hpp
msgui/layoutEngine/: BasicLayoutEngine.cpp  BasicLayoutEngine.hpp  BasicTextLayoutEngine.cpp  BasicTextLayoutEngine.hpp  CustomLayoutEngine.cpp  CustomLayoutEngine.hpp  ILayoutEngine.hpp  ITextLayoutEngine.hpp  SimpleLayoutEngine.cpp  SimpleLayoutEngine.hpp
msgui/layoutEngine/text/: ITextLayoutEngine.hpp  SimpleTextLayoutEngine.cpp  SimpleTextLayoutEngine.hpp
msgui/layoutEngine/utils/: LayoutData.cpp  LayoutData.hpp  Transform.cpp  Transform.hpp
msgui/loaders/: BELoadingQueue.cpp  BELoadingQueue.hpp  FontLoader.cpp  FontLoader.hpp  MeshLoader.cpp  MeshLoader.hpp  ShaderLoader.cpp  ShaderLoader.hpp  TextureLoader.cpp  TextureLoader.hpp
msgui/node/: AbstractNode.cpp  AbstractNode.hpp  Box.cpp  Box.hpp  BoxDivider.cpp  BoxDivider.hpp  Button.cpp  Button.hpp  Dropdown.cpp  Dropdown.hpp  FloatingBox.cpp  FloatingBox.hpp  FrameState.hpp  Image.cpp  Image.hpp  RecycleList.cpp  RecycleList.hpp  Slider.cpp  Slider.hpp  TextLabel.cpp  TextLabel.hpp  TreeView.cpp  TreeView.hpp  WindowFrame.cpp  WindowFrame.hpp
msgui/node/recyclelist/: ComplexRecycleList.cpp  ComplexRecycleList.hpp  RecycleList.cpp  RecycleList.hpp
msgui/node/utils/: BoxDividerSep.cpp  BoxDividerSep.hpp  ContextMenu.hpp  LayoutData.hpp  ListItem.hpp  ScrollBar.cpp  ScrollBar.hpp  ScrollBarKnob.cpp  ScrollBarKnob.hpp  SliderKnob.cpp  SliderKnob.hpp  TreeItem.hpp
msgui/nodeEvent/: FocusLost.hpp  LMBClick.hpp  LMBDrag.hpp  LMBItemRelease.hpp  LMBRelease.hpp  LMBReleaseNotHovered.hpp  LMBTreeItemRelease.hpp  MouseButton.hpp  NodeEventManager.hpp  RMBRelease.hpp  Scroll.hpp
msgui/renderer/: NodeRenderer.cpp  NodeRenderer.hpp  TextBufferStore.cpp  TextBufferStore.hpp  TextRenderer.cpp  TextRenderer.hpp  Types.hpp
msgui/renderer/text/: TextBufferStore.cpp  TextBufferStore.hpp  TextRenderer.cpp  TextRenderer.hpp  Types.hpp
